--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="aOC75XljmMMceKSErkZEW_nsJoFYSLoJ-hvpIuPXG-o" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Read the review of elitefxgo.com, a scam broker. Find out why elitefxgo.com is illegitimate and how novice traders are being defrauded. Contact @jfroex on Telegram for advice.">
